# ChangeLog for net-irc/weechat
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-irc/cvs-repo/gentoo-x86/net-irc/weechat/ChangeLog,v 1.9 2004/07/01 22:24:02 eradicator Exp $

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  weechat-0.0.3-r1.ebuild, weechat-0.0.3.ebuild:
  virtual/glibc -> virtual/libc

*weechat-0.0.6 (18 Jun 2004)

  18 Jun 2004; Sven Wegener <swegener@gentoo.org> +weechat-0.0.6.ebuild:
  Version bump. Made CFLAGS aware and added support for the following USE flags:
  debug, gtk (dropped gtk2 as it's only for using gtk+-2 over gtk+-1.2), perl
  and ncurses.

  18 Jun 2004; Sven Wegener <swegener@gentoo.org> metadata.xml,
  weechat-0.0.2.ebuild, weechat-0.0.3-r1.ebuild, weechat-0.0.3.ebuild:
  Removed S=${WORKDIR}/${P} and assigned to the net-irc herd

  29 May 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  weechat-0.0.3-r1.ebuild:
  Masked weechat-0.0.3-r1.ebuild testing for ppc

  10 Dec 2003; Chuck Short <zul@gentoo.org> weechat-0.0.3-r1.ebuild:
  Typos fixed.

*weechat-0.0.3-r1 (09 Dec 2003)

  09 Dec 2003; Chuck Short <zul@gentoo.org> weechat-0.0.3-r1.ebuild:
  Added gtk2 support.

*weechat-0.0.3 (09 Dec 2003)

  09 Dec 2003; Chuck Short <zul@gentoo.org> weechat-0.0.2.ebuild,
  weechat-0.0.3.ebuild:
  Version bump, previous version marked stable.

*weechat-0.0.2 (16 Oct 2003)

  16 Oct 2003; Chuck Short <zul@gentoo.org> metadata.xml,
  weechat-0.0.2.ebuild:
  Initial version, ebuild by psk <gentoo@feeleas.org>.
  Closes #29823.
