@@ -1,1 +1,0 @@
-MD5 4784327ae01097d2c92ed9b1fd5f1ba9 weechat-0.0.3.tar.bz2 259648
